Fixed wrapping in moderator log pre blocks

--- a/src/views/User/User.styl
+++ b/src/views/User/User.styl
@@ -505,6 +505,11 @@
                 padding-right: 1rem;
             }
         }
+
+        pre {
+            white-space: pre-wrap;
+            word-wrap: break-word;
+        }
     }
 
     button.toggle-ratings {
